assert(last_sp < (intptr_t*) interpreter_frame_monitor_begin(),"bad tos")

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs17
    • Affects Version/s: hs17
    • Component/s: hotspot
    • None
    • b10
    • sparc
    • solaris_10

        On x86.

        % java -server -XX:+DeoptimizeALot -XX:+TraceDeoptimization -XX:+Verbose -Xcomp t
        VM option '+DeoptimizeALot'
        VM option '+TraceDeoptimization'
        VM option '+Verbose'

        DEOPT PACKING thread 0x08099c00 Deoptimized frame (sp=0xfc6be790 unextended sp=0xfc6be790, fp=0xaec29ca8, pc=0xf94d1544)
               2 nmethod (2) java.lang.Thread::init (202 bytes)
             Virtual frames (innermost first):
                0 - frame( sp=0xfc6be790, unextended_sp=0xfc6be790, fp=0xaec29ca8, pc=0xf94d1544)
        java.lang.Thread.init(Thread.java:393) - invokevirtual @ bci 77
        {method} 'init' '(Ljava/lang/ThreadGroup;Ljava/lang/Runnable;Ljava/lang/String;J)V' in 'java/lang/Thread'
        bci: 77
        locals:
        0 a 'java/lang/Thread' <0xaec29c40>
        1 a 'java/lang/ThreadGroup' <0xaec005b0>
        2 NULL <0x00000000>
        3 "Low Memory Detector" <0xaec29ca8>
        4 0 (int) 0.000000 (float) 0 (hex) 0 (long)
        0.000000000000000e+00 (double) 0x0000000000000000 (longhex)
        5 0 (int) 0.000000 (float) 0 (hex)
        6 a 'java/lang/Thread' <0xaec00688>
        7 NULL <0x00000000>

             Created vframeArray 0x083986f0
         - interpreter_frame -> sp:
        DEOPT UNPACKING thread 0x08099c00 vframeArray 0x083986f0 mode 0
        [1 Interpreted Frame]
        Interpreted frame (sp=0xfc6be778 unextended sp=0xfc6be778, fp=0xfc6be798, pc=0xf94073c2)
        (~deoptimization entry points [0xf9405600, 0xf9409b20] 17696 bytes
        )
             BufferBlob (0xf9402608) used for Interpreter

         - local [0xaec29c40] ; #0
         - local [0xaec005b0] ; #1
         - local [0x00000000] ; #2
         - local [0xaec29ca8] ; #3
         - local [0x00000000] ; #4
         - local [0x00000000] ; #5
         - local [0xaec00688] ; #6
         - local [0x00000000] ; #7
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/frame_x86.inline.hpp:233
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/BUILD_AREA/jdk7/hotspot/src/cpu/x86/vm/frame_x86.inline.hpp:233), pid=16712, tid=2
        # Error: assert(last_sp < (intptr_t*) interpreter_frame_monitor_begin(),"bad tos")
        #
        # JRE version: 7.0-b80
        # Java VM: Java HotSpot(TM) Server VM (17.0-b07-fastdebug compiled mode solaris-x86 )
        # An error report file with more information is saved as:
        # /export/kvn/build/6898462/solaris_amd64_compiler2/jvmg/hs_err_pid16712.log
        #
        # If you would like to submit a bug report, please visit:
        # http://java.sun.com/webapps/bugreport/crash.jsp
        #

         
        --------------- T H R E A D ---------------
         
        Current thread (0x000000000044f000): JavaThread "main" [_thread_in_Java, id=1, stack(0xfffffd7fffcff000,0xfffffd7fffe00000)]
         
        Stack: [0xfffffd7fffcff000,0xfffffd7fffe00000], sp=0xfffffd7fffdfc880, free space=3f6fffffd7ffd97cf1ak
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x10722c4] void VMError::report(outputStream*) + 0xeb4
        V [libjvm.so+0x1073a05] void VMError::report_and_die() + 0x8e5
        V [libjvm.so+0x9678f2] void report_assertion_failure(const char*,int,const char*) + 0x82
        V [libjvm.so+0xa2da85] long*frame::interpreter_frame_tos_address()const + 0x95
        V [libjvm.so+0xa297fb] int frame::interpreter_frame_expression_stack_size()const + 0x4b
        V [libjvm.so+0xa29f7a] void frame::interpreter_frame_print_on(outputStream*)const + 0x14a
        V [libjvm.so+0xa29e1f] void frame::print_on(outputStream*)const + 0x5f
        V [libjvm.so+0x1066e8c] void vframeArrayElement::unpack_on_stack(int,int,frame*,bool,int) + 0xf3c
        V [libjvm.so+0x1067967] void vframeArray::unpack_to_stack(frame&,int) + 0x347
        V [libjvm.so+0x97852a] BasicType Deoptimization::unpack_frames(JavaThread*,int) + 0x2ba
        v ~DeoptimizationBlob

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: