6925249: assert(last_sp < (intptr_t*) interpreter_frame_monitor_begin(),"bad tos")

Fix assert since top deoptimized frame has last_sp == interpreter_frame_monitor_begin if there are no expressions.

Reviewed-by: twisti